--- a/style.css
+++ b/style.css
@@ -34,19 +34,19 @@ dl {
 }
 
 .task:nth-child(1) {
-    background-image: linear-gradient(to bottom, #FFC107, #ffffff);
+    background-image: linear-gradient(to bottom, #ff4800, #ffffff);
 }
 
 .task:nth-child(2) {
-    background-image: linear-gradient(to bottom, #4CAF50, #ffffff);
+    background-image: linear-gradient(to bottom, #ff4800, #ffffff);
 }
 
 .task:nth-child(3) {
-    background-image: linear-gradient(to bottom, #007bbd, #ffffff);
+    background-image: linear-gradient(to bottom, #02ff5b, #ffffff);
 }
 
 .task:nth-child(4) {
-    background-image: linear-gradient(to bottom, #fffb00, #ffffff);
+    background-image: linear-gradient(to bottom, #ff4800, #ffffff);
 }
 
 .checked{
